--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,19 @@
 {
-  "name": "Hatırlatıcı 💖",
+  "name": "İlaç Hatırlatma Güzelim",
   "short_name": "Hatırlatıcı",
-  "start_url": "./index.html",
+  "start_url": "./",
   "display": "standalone",
-  "background_color": "#ffe0ec",
-  "theme_color": "#ffe0ec",
+  "background_color": "#ffe6f0",
+  "theme_color": "#f76c91",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/4221/4221419.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/1037/1037916.png",
       "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "https://cdn-icons-png.flaticon.com/512/1037/1037916.png",
+      "sizes": "192x192",
       "type": "image/png"
     }
   ]
