--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,14 @@
 {
-  "name": "İlaç Hatırlatma Sistemi",
-  "short_name": "İlaç Hatırlatma",
-  "start_url": "./index.html",
+  "name": "İlaç Hatırlatma",
+  "short_name": "Hatırlatıcı",
+  "start_url": ".",
   "display": "standalone",
-  "background_color": "#fff0f6",
-  "theme_color": "#d81e5b",
+  "background_color": "#ffffff",
+  "theme_color": "#ff6b6b",
   "icons": [
     {
       "src": "icon.png",
       "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
       "type": "image/png"
     }
   ]
